--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "^1.19.6",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "cowsay": "^1.6.0",
     "dotenv": "^17.2.3",
     "hono": "^4.10.7",
     "pg": "^8.16.3",
