--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  gateway:
+    image: nginx:1-alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "8080:80"
+    depends_on:
+      - frontend
+      - backend
+
   frontend:
     build: ./frontend
     volumes:
@@ -6,6 +16,8 @@ services:
       - /app/node_modules
     ports:
       - "5173:5173"
+    depends_on:
+      - backend
 
   backend:
     build: ./backend
@@ -14,8 +26,12 @@ services:
       - /app/node_modules
     environment:
       DATABASE_URL: postgresql://postgres:secret@db:5432/learn-docker?schema=public
+      CHOKIDAR_USEPOLLING: "true"
     ports:
       - "3000:3000"
+    depends_on:
+      - db
+
   db:
     image: postgres:17-alpine
     environment:
